--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name ="Description" content="El objetivo de esta web es crear un portafolio con react"
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>React Portafolio</title>
-    <style>
-      *{
-        font-family: 'Roboto', sans-serif;
-        margin: 0;
-        overflow-x: hidden;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="Description" content="El objetivo de esta web es crear un portafolio con react" <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <title>Daniel Lenis</title>
+  <style>
+    * {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      overflow-x: hidden;
+    }
+
+    .whatsapp {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      bottom: 40px;
+      right: 40px;
+      background-color: #25d366;
+      color: #FFF;
+      border-radius: 50px;
+      text-align: center;
+      font-size: 30px;
+      z-index: 100;
+    }
+
+    .whatsapp-icon {
+      margin-top: 13px;
+    }
+  </style>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <a href="https://wa.me/573136321770" class="whatsapp"
+    target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+</body>
+
 </html>
