--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       text-align: center;
       font-size: 30px;
       z-index: 100;
+      box-shadow: 0px 0px 5px 3px rgb(184, 184, 184);
     }
 
     .whatsapp-icon {
@@ -39,8 +40,15 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <a href="https://wa.me/573136321770" class="whatsapp"
-    target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+
+  <div id="particles-js"></div>
+
+  <!--Whatsapp-->
+  <a href="https://wa.me/573136321770" class="whatsapp" target="_blank"> <i
+      class="fa fa-whatsapp whatsapp-icon"></i></a>
+  <!--Whatsapp/-->
+
+  
 </body>
 
 </html>
